# pymf6

./: .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  DEVELOPER.md  LICENSE  README.md  pylintrc  pyproject.toml  setup.py
conda_package/: Makefile
conda_package/pymf6/: bld.bat  build.sh  meta.yaml
doc/: Interactive.ipynb  binder.rst  changelog.md  conf.py  developer.rst  examples.rst  index.md  index.rst  principle.md  readme.rst  readthedocs-environment.yml  requirements.txt
doc/examples/analytical/: Controlled1.ipynb  Controlled2.ipynb  Controlled3.ipynb  Discretization.ipynb  Mutable.ipynb  analytic_well_cell.py  analytical.py  base_data.py  create_model.py  run_controlled.py  run_models.py  well_data.json
doc/examples/bigger_domain/: Extraction_Injection_Large.ipynb  input_pymf6.ipynb  large_4_well.py  make_model.py  mf6.ipynb  pymf6_d100.py
doc/examples/ex02-tidal/: AdvGW_tidal.ghb.obs  mfsim.nam  run.bat
doc/examples/ex02-tidal_no_ts/: AdvGW_tidal.nam  AdvGW_tidal.wel  AdvGW_tidal_no_ts.wel
doc/examples/extraction_injection/: Extraction_Injection.ipynb  extraction_injection.py
doc/examples/head_controlled_well/: Head_Controlled_Well.ipynb  make_model.py  pymf6_api_head_controlled_well.py  pymf6_direct_head_controlled_well.py  pymf6_head_controlled_well.py
doc/examples/river_condutance/: RiveRiverConductancePymf6.ipynb  RiverConductanceAPI.ipynb  RiverConductanceBase.ipynb  RiverConductanceOverview.ipynb  dynamic_cond_api.py  helpers.py
doc/examples/river_condutance/rivercond/: mfsim.nam  rivercond.chd  rivercond.dis  rivercond.ic  rivercond.ims  rivercond.nam  rivercond.npf  rivercond.oc  rivercond.riv  rivercond.tdis
doc/examples/simple_transport/: Controlled.ipynb  Controlled_Simple_Transport.ipynb  Simple_Transport.ipynb  create_model.py  svg_code_exporter.py
doc/examples/sys_in_out_wel_4/: make_model.py  mf6_run.ipynb  pymf6_input.ipynb  pymf6_run.ipynb  pymf6_sysinout_4.py
doc/examples/sys_injection_extraction/: example_pymf6.ipynb  example_sys_injection_extraction.ipynb  injection_extraction_smooth.py  make_model.py  pymf6_sys_injection_extraction.py  sys_injection_extraction.ipynb
doc/examples/tools/: __init__.py  base_model.py  main.py  make_model.py  plotting.py
doc/examples/transport/: dic_input.py  make_model.py  mf6_run.ipynb
doc/notebooks/: Interactive.ipynb
doc/scripts/: chd.py  temporal.py  well.py
fsrc/: access_memory.f90  compilerversion.f90  mf6sub.f90  shared_data.f90
make/: compile_f2py.py  compile_full_f2py.py
mfsrc/: BoundaryPackage.f90  Connections.f90  Constants.f90  DiscretizationBase.f90  GwfGwfExchange.f90  InputOutput.f90  ListReader.f90  Memory.f90  MemoryManager.f90  Mover.f90  NameFile.f90  Obs3.f90  Observe.f90  OutputControl.f90  OutputControlData.f90  Sim.f90  TimeArraySeries.f90  TimeSeries.f90  Xt3dAlgorithm.f90  comarg.f90  genericutils.f90  gwf3.f90  gwf3chd8.f90  gwf3dis8.f90  gwf3disv8.f90  gwf3drn8.f90  gwf3evt8.f90  gwf3ghb8.f90  gwf3lak8.f90  gwf3maw8.f90  gwf3mvr8.f90  gwf3npf8.f90  gwf3rch8.f90  gwf3riv8.f90  gwf3sfr8.f90  gwf3sto8.f90  gwf3uzf8.f90  gwf3wel8.f90  ims8linear.f90  kind.f90  (+1 more)
pymf6/: __init__.py  callback.py  datastructures.py  fortran_io.py  mf6_init_run.py  mfnames.py  threaded.py
pymf6/tests/: test_bool.py  test_cback.py  test_mfnames.py  test_thread.py
pymf6/tests/functional/: README.md  pymf6_MF6_benchmarks.xlsx
pymf6/tests/functional/scenarios/: results.txt  scenario_a.py  scenario_b.py  scenario_c.py
pymf6/tests/functional/test_builder/: base_data.py  base_model.py  runners.py
pymf6/tools/: formatter.py  formatters.py  tempdir.py
src/pymf6/: __init__.py  api.py  datastructures.py  main.py  mf6.py
src/pymf6/modeling_tools/: base_model.py  make_model.py  plotting.py
src/pymf6/tools/: __init__.py  create_mf6_var_docs.py  formatters.py  info.py  infos.py
src/tests/: run_model.py  run_xmipy_model.py  set_envs.txt  test_m6_examples.py
src/tests/mf6examples/ex-gwf-advtidal/: ex-gwf-advtidal.dis  ex-gwf-advtidal.evt  ex-gwf-advtidal.ghb  ex-gwf-advtidal.ghb.obs  ex-gwf-advtidal.ghb.ts  ex-gwf-advtidal.ic  ex-gwf-advtidal.ims  ex-gwf-advtidal.nam  ex-gwf-advtidal.npf  ex-gwf-advtidal.obs  ex-gwf-advtidal.oc  ex-gwf-advtidal.rch1  ex-gwf-advtidal.rch1.ts  ex-gwf-advtidal.rch2  ex-gwf-advtidal.rch2.ts  ex-gwf-advtidal.rch3  ex-gwf-advtidal.rch3.ts  ex-gwf-advtidal.riv  ex-gwf-advtidal.riv.ts  ex-gwf-advtidal.sto  ex-gwf-advtidal.tdis  ex-gwf-advtidal.wel  ex-gwf-advtidal.wel.ts  mfsim.nam
src/tests/mf6examples/ex-gwf-bcf2ss-p01a/: ex-gwf-bcf2ss.dis  ex-gwf-bcf2ss.ims  ex-gwf-bcf2ss.nam  ex-gwf-bcf2ss.npf  ex-gwf-bcf2ss.oc  ex-gwf-bcf2ss.riv  ex-gwf-bcf2ss.wel  mfsim.nam
src/tests/mf6examples/ex-gwf-bcf2ss-p02a/: ex-gwf-bcf2ss.ic  ex-gwf-bcf2ss.ims  ex-gwf-bcf2ss.nam  ex-gwf-bcf2ss.npf  ex-gwf-bcf2ss.rcha  ex-gwf-bcf2ss.tdis
src/tests/mf6examples/ex-gwf-bump-p01a/: ex-gwf-bump.dis  ex-gwf-bump.oc
src/tests/mf6examples/ex-gwf-bump-p01b/: ex-gwf-bump.chd  ex-gwf-bump.ic  ex-gwf-bump.ims  ex-gwf-bump.nam  ex-gwf-bump.npf  mfsim.nam
src/tests/mf6examples/ex-gwf-bump-p01c/: ex-gwf-bump.dis  ex-gwf-bump.ims  ex-gwf-bump.nam  ex-gwf-bump.npf  ex-gwf-bump.tdis
src/tests/mf6examples/ex-gwf-csub-p01/: ex-gwf-csub-p01.csub  ex-gwf-csub-p01.dis  ex-gwf-csub-p01.ic  ex-gwf-csub-p01.ims  ex-gwf-csub-p01.load.ts  ex-gwf-csub-p01.nam  ex-gwf-csub-p01.npf  ex-gwf-csub-p01.obs  ex-gwf-csub-p01.oc  ex-gwf-csub-p01.sto  ex-gwf-csub-p01.tdis  mfsim.nam
src/tests/mf6examples/ex-gwf-csub-p02a/: ex-gwf-csub-p02a.csub  ex-gwf-csub-p02a.csub.obs  ex-gwf-csub-p02a.nam  ex-gwf-csub-p02a.sto  mfsim.nam
src/tests/mf6examples/ex-gwf-csub-p02b/: ex-gwf-csub-p02b.csub  ex-gwf-csub-p02b.csub.obs  ex-gwf-csub-p02b.nam  ex-gwf-csub-p02b.obs  ex-gwf-csub-p02b.oc  mfsim.nam
src/tests/mf6examples/ex-gwf-csub-p03a/: ex-gwf-csub-p03.head.ts  ex-gwf-csub-p03a.chd  ex-gwf-csub-p03a.csub  ex-gwf-csub-p03a.csub.obs  ex-gwf-csub-p03a.dis  mfsim.nam  (+8 more)
tests/: run_failed.py  run_mf6_examples.py  run_model.py  test_info.py
tools/: create_mf6_var_docs.py  make_docstrings.py
(+1189 files in other folders)
