[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pymf6"
description = "High-level Python Wrapper for MODFLOW 6"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["packaging", "example"]
license = {text = "MIT License"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Framework :: Jupyter :: JupyterLab",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: Implementation :: CPython",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Hydrology"
]

dependencies = ["numpy", "xmipy"]
dynamic = ["version"]

[project.scripts]
pymf6 = "pymf6.main:main"

[project.urls]
homepage = "https://github.com/hydrocomputing/pymf6"
documentation = "https://pymf6.readthedocs.io/en/latest/index.html"
repository = "https://github.com/hydrocomputing/pymf6"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools.package-dir]
pymf6 = "src/pymf6"

[tool.setuptools_scm]
write_to = "src/pymf6/_version.py"
