[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pymf6"
description = "High-level Python Wrapper for MODFLOW 6"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "MODFLOW6",
    "groundwater",
    "modeling",
    "dynamic boundary condition"
    ]
license = {text = "MIT License"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Framework :: Jupyter :: JupyterLab",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: Implementation :: CPython",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Hydrology"
]

dependencies = ["modflowapi"]
dynamic = ["version"]

[project.scripts]
pymf6 = "pymf6.main:main"

[project.urls]
homepage = "https://github.com/hydrocomputing/pymf6"
documentation = "https://pymf6.readthedocs.io/en/latest/index.html"
repository = "https://github.com/hydrocomputing/pymf6"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools.package-dir]
pymf6 = "src/pymf6"

[tool.setuptools_scm]
write_to = "src/pymf6/_version.py"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
pandas = "*"
matplotlib = "*"
xmipy = "*"


[tool.pixi.pypi-dependencies]
pymf6 = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
analytic = { features = ["test", "analytic"], solve-group = "default" }
develop = { features = ["develop"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.feature.test.dependencies]
python = ">=3.13,<3.14"
matplotlib = "*"
pytest = ">=8.2.2,<8.3"
jupyterlab = "*"
pip = ">=24.0,<25"
ipywidgets = "*"
matplotlib-inline = ">=0.1.7,<0.2"
ipympl = ">=0.9.5,<0.10"

# [tool.pixi.feature.test.pypi-dependencies]

[tool.pixi.feature.analytic.dependencies]
python = ">=3.13,<3.14"
ttim = "*"
numpy = "*"
scipy = "*"
numba = "*"
matplotlib = "*"
lmfit = "*"
pandas = "*"

[tool.pixi.feature.analytic.pypi-dependencies]
timml = "*"

[tool.pixi.feature.develop.dependencies]
python = ">=3.13,<3.14"
matplotlib = "*"
pytest = ">=8.2.2,<8.3"
jupyterlab = "*"
pip = ">=24.0,<25"
xmipy = "*"
pandas = "*"
myst-nb = "*"
jupytext = "*"
setuptools_scm = "*"
recommonmark = "*"
git = "*"
jupyterlab-spellchecker = "*"
pytables = ">=3.10.2,<4"
pooch = "*"

[tool.pixi.feature.develop.pypi-dependencies]
pymf6-tools = { path = "../pymf6-tools", editable = true }
jbmagics = { path = "../jbmagics", editable = true }
modflowapi = { path = "../modflowapi/orig/modflowapi", editable = true }
lxml_html_clean = "*"
